--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,22 +5,39 @@
     <meta http-equiv="x-ua-compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width">
     <meta name="apple-mobile-web-app-capable" content="yes">
+
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 
     <title>LEITMOTIV</title>
 </head>
 <body>
-<layout></layout>
+
+
+<navbarmenu></navbarmenu>
+
+
 <div ng-view></div>
+
 <script src="js/jquery-3.2.1.slim.min.js"></script>
 <script src="js/angular.js"></script>
 <script src="js/angular-route.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/navbarB.js"></script>
 
-<script src="app/components/router.js"></script>
+<script src="app/router.js"></script>
+<script src="app/components/navbar/navbar.js"></script>
+
 <script src="app/components/home/home.js"></script>
-
+<script src="app/components/obras/obras.js"></script>
+<script src="app/components/venderEntrada/venderEntrada.js"></script>
+<script src="app/components/persona/persona.js"></script>
+<script src="app/components/compañia/compañia.js"></script>
+<script src="app/components/sobreNosotros/sobreNosotros.js"></script>
+<script src="app/components/crearObra/crearObra.js"></script>
+<script src="app/components/organismo/organismo.js"></script>
+<script src="app/components/estadistica/estadistica.js"></script>
 </body>
 </html>
